tests/ui/05-section-in-async-block.stderr
error: section cannot be described in an async block
 --> $DIR/05-section-in-async-block.rs:6:9
  |
6 | /         section!("section", {
7 | |             assert!(true);
8 | |         });
  | |__________^
