tests/ui/05-section-in-async-block.rs
fn main() {}

#[rye::test_case]
fn section_in_closure() {
    let _ = std::convert::identity(async {
        section!("section", {
            assert!(true);
        });
    });
}
